# libgetline

./: Makefile.am  Makefile.in  README.md  aclocal.m4  configure  configure.ac  libgetline.c  libgetline.h  makefile  readln.c
autom4te.cache/: output.0  requests  traces.0  traces.1
include/: config.h.in  libgetline.h  libgetlineP.h
src/: libgetline.c
